package com.design.strategy;

public interface FlyBehavior {
    void fly();
}