package com.design.strategy;

public interface QuackBehavior {
    void quack();
} 